# adjust-blocks

./: README.md  package.json  pyproject.toml  pyrightconfig.json
adjust_blocks/: __init__.py  __main__.py  adjust_blocks.py
tests/: test_adjust_blocks.py
